# Forgehash

./: .gitignore  AI.md  CONTRIBUTING.md  ForgeHash.sln  LICENSE  README.md  SECURITY.md  SPECIFICATION.md
.github/workflows/: crates.yml  forgehx.yml  npm.yml  nuget.yml  pages.yml  pypi-forgeh.yml  pypi-forgehx.yml  pypi.yml
docs/: IMPLEMENTING.md  PUBLISHING.md  README.md  RESEARCH.md  RESEARCH_REPORT.md  USAGE.md
docs/forgehx/: README.md  RESEARCH_NOTES.md  SPECIFICATION_X.md
docs/forgehx/paper/: ForgeHash_X_Research_Paper.typ  README.md  references.bib
implementers/v1/: CHECKLIST.md  OUTLINE.md  README.md  manifest.json  verify-vectors.md
implementers/v1/vectors/: vector2_password_incrementing_salt.json
implementers/x0/: CHECKLIST.md  OUTLINE.md  README.md  manifest.json  verify-vectors.md
implementers/x0/kats/: forgex_primitive.json
implementers/x0/vectors/: vector1_empty_password_zero_salt.json  vector2_short_password_incrementing_salt.json  vector3_two_lanes_toy.json
langs/: README.md
langs/cpp/forgeh/: CMakeLists.txt  README.md
langs/cpp/forgeh/include/: forgeh.hpp
langs/cpp/forgeh/src/: forgeh.cpp
langs/cpp/forgeh/tests/: c_abi_smoke.c  vector_test.cpp
langs/cpp/forgehx/: CMakeLists.txt  README.md
langs/cpp/forgehx/include/: forgehx.hpp
langs/cpp/forgehx/src/: forgehx.cpp
langs/cpp/forgehx/tests/: vector_test.cpp
langs/nodejs/forgeh/: README.md  package-lock.json  package.json
langs/nodejs/forgeh/src/: encoding.js  engine.js  forgemix.js  index.js  params.js
langs/nodejs/forgeh/test/: vectors.test.js
langs/nodejs/forgehx/: README.md  package-lock.json  package.json
langs/nodejs/forgehx/src/: encoding.js  engine.js  forgeperm.js  forgex.js  index.js  params.js
langs/nodejs/forgehx/test/: vectors.test.js
langs/php/forgeh/: README.md  composer.json
langs/php/forgeh/src/: ForgeHash.php
langs/php/forgeh/tests/: vectors.php
langs/php/forgehx/: README.md
langs/php/forgehx/src/: ForgeHashX.php
langs/php/forgehx/tests/: vectors.php
langs/python/forgeh/: README.md  pyproject.toml
langs/python/forgeh/src/forgeh/: __init__.py  encoding.py  engine.py  forgemix.py  params.py
langs/python/forgeh/tests/: test_vectors.py
langs/python/forgehx/: README.md  pyproject.toml
langs/python/forgehx/src/forgehx/: __init__.py  encoding.py  engine.py  forgeperm.py  forgex.py  params.py
langs/python/forgehx/tests/: test_primitive_kats.py  test_vectors.py
langs/rust/forgeh/: Cargo.toml  README.md
langs/rust/forgeh/src/: encoding.rs  engine.rs  error.rs  forgemix.rs  lib.rs  params.rs
langs/rust/forgeh/tests/: official_vectors.rs
langs/rust/forgehx/: Cargo.toml  README.md
langs/rust/forgehx/src/: encoding.rs  engine.rs  forgeperm.rs  forgex.rs  lib.rs  params.rs
langs/rust/forgehx/tests/: toy_vectors.rs
samples/ForgeHash.Sample/: ForgeHash.Sample.csproj  Program.cs
samples/ForgeHash.X.Sample/: ForgeHash.X.Sample.csproj  Program.cs
src/ForgeHash.Analysis/: B3CollisionHasher.cs  CollisionCampaign.cs  CollisionCostSnapshot.cs  ForgeHash.Analysis.csproj  ICollisionHasher.cs  ReferenceAnalysis.cs  XCollisionHasher.cs
src/ForgeHash.Benchmarks/: ForgeHash.Benchmarks.csproj  Program.cs
src/ForgeHash.Cli/: ForgeHash.Cli.csproj  Program.cs  README.md
src/ForgeHash.CollisionLab/: App.xaml  App.xaml.cs  ForgeHash.CollisionLab.csproj  MainWindow.xaml  MainWindow.xaml.cs
src/ForgeHash.Core/: Blake3Adapter.cs  BlockReferenceTrace.cs  FastRange.cs  ForgeHash.Core.csproj  ForgeHash.cs  ForgeHashEncoding.cs  ForgeHashEngine.cs  ForgeHashParameters.cs  ForgeHashParser.cs  ForgeHashTestVectors.cs  ForgeMix.cs  MemoryMatrix.cs  ParameterValidator.cs  ParsedForgeHash.cs  TestVectorSnapshot.cs
src/ForgeHash.Core/Internal/: BinaryEncoding.cs
src/ForgeHash.Core/Properties/: AssemblyInfo.cs
src/ForgeHash.Visualizer/: ForgeHash.Visualizer.csproj  Program.cs
src/ForgeHash.X.Core/: BinaryUtil.cs  ForgeHash.X.Core.csproj  ForgeHashX.cs  ForgeHashXEncoding.cs  ForgeHashXEngine.cs  ForgeHashXParameters.cs  ForgePerm.cs  ForgeX.cs  README.md
src/ForgeHash.X.Core/Properties/: AssemblyInfo.cs
tests/ForgeHash.CrossImplementation.Tests/: ForgeHash.CrossImplementation.Tests.csproj  OfficialVectorInteropTests.cs  XToyVectorInteropTests.cs
tests/ForgeHash.Tests/: AvalancheTests.cs  CollisionTests.cs  ConstantTimeTests.cs  DeterminismTests.cs  EncodingTests.cs  FastRangeTests.cs  ForgeHash.Tests.csproj  ForgeMixTests.cs  MemoryInfluenceTests.cs  MemoryMutationTests.cs  OfficialTestVectors.g.cs  ParallelEquivalenceTests.cs  ParameterTests.cs  ParserAttackTests.cs  ParserTests.cs  ReferenceDistributionTests.cs  SecurityAnalysisTests.cs  TestVectorTests.cs  VerificationTests.cs  VersionMetadataTests.cs
tests/ForgeHash.X.Tests/: AvalancheTests.cs  CollisionTests.cs  DeterminismTests.cs  EncodingTests.cs  ForgeHash.X.Tests.csproj  ParallelEquivalenceTests.cs  ParameterTests.cs  PrimitiveKatTests.cs  ToyVectorTests.cs
tests/vectors/: FORGEHASH_B3_V1_VECTORS.md  vector1_empty_password_zero_salt.json  vector3_utf8_two_lanes.json  vector4_null_bytes_four_lanes.json
tools/ForgeHash.ResearchBench/: BenchCommon.cs  ForgeHash.ResearchBench.csproj  PeerSuite.cs  Program.cs
tools/ForgeHash.VectorGen/: ForgeHash.VectorGen.csproj  Program.cs
tools/ForgeHash.X.VectorGen/: ForgeHash.X.VectorGen.csproj  Program.cs
tools/crosscheck/: x_vector2.mjs  x_vector2.py
website/: 404.html  README.md  developers.html  implementing.html  index.html  languages.html  research-report.html  research.html  researchers.html  security.html  spec.html  usage.html  vectors-x.html  vectors.html
website/assets/: site.js  styles.css
