[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forgeh"
version = "1.0.0a0"
description = "Experimental ForgeHash-B3 v1 memory-hard password hashing (Python reference). NOT for production use."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["forgehash", "password-hashing", "blake3", "memory-hard", "experimental", "cryptography"]
dependencies = [
  "blake3>=0.3.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/forgeh/ForgeHash"
Documentation = "https://github.com/forgeh/ForgeHash/blob/main/SPECIFICATION.md"

[tool.hatch.build.targets.wheel]
packages = ["src/forgeh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
