[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forgehx"
version = "0.1.0a0"
description = "Experimental ForgeHash-X v0 (custom ForgeX sponge). NOT for production. Not B3-compatible."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["forgehash", "forgehx", "password-hashing", "memory-hard", "experimental", "cryptography"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/ThomasBeHappy/Forgehash"
Documentation = "https://github.com/ThomasBeHappy/Forgehash/blob/main/docs/forgehx/SPECIFICATION_X.md"

[tool.hatch.build.targets.wheel]
packages = ["src/forgehx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
