[package]
name = "forgeh"
version = "1.0.0-experimental"
edition = "2021"
description = "Experimental ForgeHash-B3 password hashing. NOT for production use."
license = "MIT"
readme = "README.md"
keywords = ["password", "hash", "blake3", "memory-hard", "experimental"]
categories = ["cryptography"]

[lib]
name = "forgeh"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
blake3 = "1.5"
getrandom = "0.3"
thiserror = "2"

[dev-dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
